# QT-MultiMedia-3D-Workstation

./: .gitignore  CMakeLists.txt  README.md
.trae/skills/code-checker/: SKILL.md
cmake/: FFMPEGImports.cmake
docs/: VIDEO_PLAYER_FFMPEG.md  变更摘要.md
src/: .qmlls.ini  CMakeLists.txt  main.cpp  qml.qrc
src/3d/: CMakeLists.txt  Camera.cpp  Camera.h  Custom3DModel.cpp  Custom3DModel.h  ModelLoader.cpp  ModelLoader.h  OpenGLItem.cpp  OpenGLItem.h  Qml3DRenderer.cpp  Qml3DRenderer.h  Renderer.cpp  Renderer.h
src/core/: AsyncPipeline.cpp  AsyncPipeline.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  Core.cpp  Core.h  Model.cpp  Model.h  ViewModel.cpp  ViewModel.h
src/imageprocessing/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
src/memory/: CMakeLists.txt  MemoryPool.cpp  MemoryPool.h  RingBuffer.cpp  RingBuffer.h
src/multimedia/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  FFmpegDecoder.cpp  FFmpegDecoder.h  VideoFrameImageProvider.cpp  VideoFrameImageProvider.h  VideoPlayer.cpp  VideoPlayer.h
src/opengl-viewer/: CMakeLists.txt  GLCamera.cpp  GLCamera.h  GLModel.cpp  GLModel.h  GLRenderer.cpp  GLRenderer.h  GLWidget.cpp  GLWidget.h  main.cpp
src/opengl-viewer/shaders/: solid.vert
src/other-viewer/: BgfxRenderer.cpp  BgfxRenderer.h  CMakeLists.txt  FramebufferObject.cpp  FramebufferObject.h  ModelLoader.cpp  ModelLoader.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/other-viewer/shaders/: point.frag  point.vert  solid.frag  wireframe.frag
src/qml/: CameraController.qml  ControlPanel.qml  ControlsPage.qml  HomePage.qml  MainWindow.qml  Model3DPage.qml  ModelViewerOpenglPage.qml  ModelViewerOther.qml  ModelViewerPage.qml  TestPage.qml  VideoPlayerPage.qml  main.qml
src/qml/pages/: ControlsPage.qml  HomePage.qml  Model3DPage.qml  VideoPlayerPage.qml  qmldir
src/qtquick3d-viewer/: CMakeLists.txt  CameraController.cpp  CameraController.h  ModelLoader.cpp  ModelLoader.h  quickModelLoader.cpp  quickModelLoader.h
src/thread/: CMakeLists.txt  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h
src/ui/: CMakeLists.txt
test_models/: cube.stl
tests/: CMakeLists.txt  auto_test_3d.cpp  e2e_test.cpp  integration_test_3d.cpp  test_3d.cpp  test_3d_functionality.cpp  test_core.cpp  test_multimedia.cpp  test_video.cpp
